# resume-creator-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  ideas.txt  pyproject.toml  watcher.py
backend/: main.py
backend/endpoints/: resume_endpoint.py  user_endpoint.py
bot/: bot.py  router.py
bot/handlers/: start_handler.py
core/: __init__.py
core/alembic/: env.py
core/alembic/versions/: 3124b6cc3bd3_init_db.py  79b2b15a2104_init_db.py  a372df46f46a_init_db.py  b81def5b422c_user_model.py  c59e036754d9_init_db.py
core/db/: db.py
core/models/: profile.py  resume.py  resume_version.py  user.py
core/schemas/: profile_schema.py  resume_schema.py  resume_version_schema.py  user_schema.py
core/services/: resume_service.py  user_service.py
core/utils/: redis_cache.py
core/utils/agents/: gpt_agent.py  redis_session.py
core/utils/agents/agent_instructions/: resume_creator_agent_instructions.txt  resume_editor_agent_instructions.txt
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: App.jsx
webapp/src/api/: telegramApi.js
webapp/src/pages/: mainPage.jsx
